[gd_scene load_steps=3 format=3 uid="uid://ci5tad8ea3ndc"]

[ext_resource type="Script" uid="uid://c6yx8g0bq5o43" path="res://utilities/quest_manager/quest.gd" id="1_5eip0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2fgn"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 0.588235)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Quest" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_5eip0")

[node name="QuestBox" type="Panel" parent="."]
custom_minimum_size = Vector2(350, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_right = 175.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u2fgn")

[node name="VBoxContainer" type="VBoxContainer" parent="QuestBox"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 47.0
grow_horizontal = 2

[node name="QuestTitle" type="Label" parent="QuestBox/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Quest Title"
horizontal_alignment = 1

[node name="QuestDescription" type="Label" parent="QuestBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Gather Materials"
